--- a/css/auth.css
+++ b/css/auth.css
@@ -77,7 +77,7 @@
 
 .auth__tooltip {
     position: absolute;
-    top: 100%;
+    bottom: 120%;
     right: 0;
     width: min(260px, 90vw);
     padding: 0.75rem;
@@ -89,11 +89,12 @@
     z-index: 30;
 }
 
+/* only useful if info button is to the right
 @media (max-width: 780px) {
     .auth__tooltip {
         right: unset;
     }
-}
+}*/
 
 .auth__tooltip[hidden] {
     display: none;
