improve lighthouse performance score Largest contentful paint (LCP) from 24.2s to 5.6s by using  webp images

--- a/css/match-app.css
+++ b/css/match-app.css
@@ -30,7 +30,7 @@ body {
 }
 
 .match-app--menu {
-    background-image: url("/assets/images/main-menu-bg-landscape.png");
+    background-image: url("/assets/images/main-menu-bg-landscape.webp");
     background-size: contain;
     background-position: top center;
     background-repeat: no-repeat;
@@ -39,7 +39,7 @@ body {
 
 @media (max-width: 780px) {
     .match-app--menu {
-        background-image: url("/assets/images/main-menu-background.png");
+        background-image: url("/assets/images/main-menu-background.webp");
         background-size: cover;
         background-position: top center;
         background-repeat: no-repeat;
