--- a/templates/partials/hud-and-game.html
+++ b/templates/partials/hud-and-game.html
@@ -47,3 +47,9 @@
     >
         <span id="shuffle-notice-text" class="shuffle-notice__text"></span>
     </div>
+    <div id="cutscene" class="cutscene" hidden aria-hidden="true" role="status">
+        <div class="cutscene__content">
+            <img src="assets/images/mira.png" alt="Mira" class="cutscene__portrait" />
+            <p id="cutscene-line" class="cutscene__line"></p>
+        </div>
+    </div>
