--- a/css/shop.css
+++ b/css/shop.css
@@ -4,7 +4,7 @@
     display: none;
     align-items: center;
     justify-content: center;
-    background: rgba(4, 5, 10, 0.9);
+    background: #1e1e2f;
     backdrop-filter: blur(20px);
     padding: 1rem;
     z-index: 40;
